src/main/java/com/example/leica_refactoring/error/exception/requestError/UnAuthorizedException.java
package com.example.leica_refactoring.error.exception.requestError;

import com.example.leica_refactoring.error.security.ErrorCode;

public class UnAuthorizedException extends BusinessException{

    public UnAuthorizedException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
